Add CreateAnonymousSession to OpenAPI contract
