# be/facade-rest/openapi/hotel-booking.yaml
@@ -68,6 +68,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemResponse'
 
+  /api/auth/v1/session/anonymous:
+    post:
+      operationId: createAnonymousSession
+      summary: Create anonymous user & a session for the new user
+      tags:
+        - session
+      responses:
+        "201":
+          description: Return details of newly created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SessionResponse'
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                format: cookie
+
 
 components:
   securitySchemes:
