# be/facade-rest/src/main/kotlin/me/aburke/hotelbooking/facade/rest/api/auth/v1/session/CreateAnonymousSessionHandler.kt
@@ -4,16 +4,9 @@ import io.javalin.http.Context
 import io.javalin.http.Handler
 import io.javalin.http.HttpStatus
 import me.aburke.hotelbooking.facade.rest.authentication.setAuthCookie
+import me.aburke.hotelbooking.facade.rest.responses.SessionResponse
 import me.aburke.hotelbooking.model.user.UserSession
 import me.aburke.hotelbooking.scenario.user.CreateAnonymousUserScenario
-import java.time.Instant
-
-data class CreateAnonymousSessionResponse(
-    val userId: String,
-    val userRoles: List<String>,
-    val anonymousUser: Boolean,
-    val sessionExpiryTime: Instant,
-)
 
 class CreateAnonymousSessionHandler(
     private val createAnonymousUserScenario: CreateAnonymousUserScenario,
@@ -27,8 +20,9 @@ class CreateAnonymousSessionHandler(
     }
 }
 
-private fun UserSession.toResponse() = CreateAnonymousSessionResponse(
+private fun UserSession.toResponse() = SessionResponse(
     userId = userId,
+    loginId = null,
     userRoles = userRoles.map { it.name },
     anonymousUser = true,
     sessionExpiryTime = sessionExpiryTime,
